--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,11 @@
   padding: 0 2rem;
 }
 
+.buttongrid {
+  display: flex;
+  justify-content: center;
+}
+
 .main {
   min-height: 100vh;
   padding: 4rem 0;
