--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,13 @@ li {
   align-self:flex-end;
   
 }
+
+.camicons {
+  /* background-color:red; */
+  display: flex;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  gap: 2em;
+}
