additional food added

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -121,3 +121,13 @@
   }
 }
 
+.chat {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap:2rem;
+  width:35rem;
+  margin-left:auto;
+  margin-right:auto;
+}
