--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -131,3 +131,31 @@
   margin-left:auto;
   margin-right:auto;
 }
+.message {
+  display:flex;
+  gap:1rem;
+  align-self:flex-start ;
+}
+.message1 {
+  display:flex;
+  gap:1rem;
+  align-self:flex-end;
+}
+.camicons {
+  display: flex;
+  align-items: center;
+}
+.padding {
+  padding-top:60px;
+  display:flex;
+  gap:10px;
+}
+.choices {
+  display: flex;
+}
+
+.chatbox {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
