--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,7 +47,7 @@ button {
   position: absolute;
 } */
 
-.chat {
+/* .chat {
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -56,33 +56,11 @@ button {
   width:35rem;
   margin-left:auto;
   margin-right:auto;
-}
+} */
 
-.message {
-  display:flex;
-  gap:1rem;
-  align-self:flex-start ;
-}
-.message1 {
-  display:flex;
-  gap:1rem;
-  align-self:flex-end;
-  
-}
 
-.camicons {
-  display: flex;
-  align-items: center;
-}
 
-.padding {
-  padding-top:60px;
-  display:flex;
-  gap:10px;
-}
 
-.chatbox {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
+
+
+
