--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -188,17 +188,17 @@
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-
+/* 
 .flip_card:hover .flip_card_inner {
   transform: rotateY(180deg);
-}
+} */
 
 .flip_card_front, .flip_card_back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  /* -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; */
 }
 
 .flip_card_front {
